# v8-cmake

./: .gitignore  .gitpod.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  update_v8.json  update_v8.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
CMakeTests/: test_cctest.cmake  test_mkgrokdump.cmake  test_unittests.cmake  testing_gmock.cmake  testing_gtest.cmake  tests.cmake  third_party_googletest.cmake  third_party_zlib.cmake  third_party_zlib_google.cmake  tools_debug_helper.cmake  unittests.cmake
cmake/: CheckPythonModuleExists.cmake  FindPython.cmake  GNUtils.cmake  GenerateBuiltinsList.cmake  MSVC.cmake
docs/: debug-in-vscode.md
include/: precomp_stl.h
patches/: 0001-Patch-v8-third_party-inspector_protocol-code_generat.patch  0002-Patch-v8-src-heap-third-party.patch  0002-heap-Add-proper-rebind-support-to-StrongRootBlockAll.patch  0003-Back-port-v8-v8-a113954.patch  002_heap.patch  fix_gcc_build.patch
v8/include/: v8config.h
v8/src/d8/: d8.cc
v8/tools/clusterfuzz/js_fuzzer/: package-lock.json
